Revert problematic page height fix + fix overflowing bottom 41px

--- a/src/app/common/components/AppRoot.scss
+++ b/src/app/common/components/AppRoot.scss
@@ -17,11 +17,13 @@
 	position: relative;
 	overflow: hidden;
 	height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 .app-root_vc3j5h > .content > .screens {
 	position: relative;
 	overflow: hidden;
-	height: 100%;
+	flex-grow: 1;
 }
 .app-root_vc3j5h > .content > .screens > .screen {
 	position: absolute;
