--- a/src/app/common/components/screens/AuthorScreen.scss
+++ b/src/app/common/components/screens/AuthorScreen.scss
@@ -3,6 +3,9 @@
 	cssComponentId: author-screen_2cri7v
 */
 
+.author-screen_2cri7v {
+	min-height: 100%;
+}
 .author-screen_2cri7v > .header {
 	text-align: center;
 	background-color: var(--app-background-alt-color);
