--- a/src/app/common/components/screens/LeaderboardsScreen.scss
+++ b/src/app/common/components/screens/LeaderboardsScreen.scss
@@ -4,6 +4,10 @@
 */
 @import '../../../../common/styles/colors';
 
+.leaderboards-screen_wuzsob {
+	min-height: 100%;
+}
+
 .leaderboards-screen_wuzsob > .header {
 	text-align: center;
 
