--- a/src/app/common/components/screens/ProfileScreen.scss
+++ b/src/app/common/components/screens/ProfileScreen.scss
@@ -4,6 +4,7 @@
 */
 
 .profile-screen_1u1j1e {
+	min-height: 100%;
 	display: flex;
 	flex-flow: column;
 }
